--- a/source/scenes/fibonacci_spiral.ipynb
+++ b/source/scenes/fibonacci_spiral.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyMJYUdhrWztmRPjqzPbv8yb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +32,7 @@
       "source": [
         "# Fibonacci Spiral\n",
         "\n",
-        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/_images/fibonacci_spiral.png\">\n",
+        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/site/fibonacci_spiral.png\">\n",
         "\n",
         "There is a fascinating relation between the Fibonacci sequence and natural patterns. A remarkable example is the Fibonacci spiral, which is constructed by adding arcs of quarter circles with radii corresponding to Fibonacci numbers, making a beautiful mathematical pattern often observed throughout nature. &#10024;&nbsp;[mscene.curiouswalk.com/scenes/fibonacci-spiral](https://mscene.curiouswalk.com/scenes/fibonacci-spiral)"
       ],
@@ -116,7 +115,7 @@
         "\n",
         "\n",
         "def fsmob(n, width=None, height=None):\n",
-        "    \"\"\"VGroup of Mobjects creating the Fibonacci spiral.\n",
+        "    \"\"\"VGroup of Mobjects for the Fibonacci spiral.\n",
         "\n",
         "    Args:\n",
         "        n (int): Number of first Fibonacci terms.\n",
@@ -190,8 +189,8 @@
         "    return mobjects\n",
         "\n",
         "\n",
-        "def spiral_anim(mob, mode=\"IN\", lag_ratio=0.125, **kwargs):\n",
-        "    \"\"\"Return an AnimationGroup for spiral animation.\"\"\"\n",
+        "def fsmob_anim(mob, mode=\"IN\", lag_ratio=0.125, **kwargs):\n",
+        "    \"\"\"Return an AnimationGroup for the Fibonacci spiral.\"\"\"\n",
         "\n",
         "    if mode == \"IN\":\n",
         "\n",
@@ -311,10 +310,10 @@
         "        width = config.frame_width * 3 / 4\n",
         "        mob = fsmob(6, width=width)\n",
         "\n",
-        "        self.play(spiral_anim(mob))\n",
+        "        self.play(fsmob_anim(mob))\n",
         "        self.wait(2.5)\n",
         "\n",
-        "        self.play(spiral_anim(mob, mode=\"OUT\"))\n",
+        "        self.play(fsmob_anim(mob, mode=\"OUT\"))\n",
         "        self.wait(0.5)"
       ],
       "metadata": {
@@ -348,18 +347,18 @@
         "            _mob = fsmob(n, width)\n",
         "\n",
         "            if mob is None:\n",
-        "                self.play(spiral_anim(_mob))\n",
+        "                self.play(fsmob_anim(_mob))\n",
         "            else:\n",
         "                i = term if term < n else -1\n",
         "                self.play(ReplacementTransform(mob, _mob[:i]))\n",
         "                self.wait(0.5)\n",
-        "                self.play(spiral_anim(_mob[i:]))\n",
+        "                self.play(fsmob_anim(_mob[i:]))\n",
         "\n",
         "            mob = _mob\n",
         "            term = n\n",
         "            self.wait(1.5)\n",
         "\n",
-        "        self.play(spiral_anim(mob, mode=\"OUT\", lag_ratio=0))\n",
+        "        self.play(fsmob_anim(mob, mode=\"OUT\", lag_ratio=0))\n",
         "        self.wait(0.5)"
       ],
       "metadata": {
