--- a/source/scenes/mscene.ipynb
+++ b/source/scenes/mscene.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrvYakTKESZjQow4r5oirK",
+      "gpuType": "V28",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -31,7 +32,7 @@
       "source": [
         "# Mscene\n",
         "\n",
-        "A Python library for creating science animations with Manim in Google Colab. &#10024;&nbsp;[mscene.curiouswalk.com](https://mscene.curiouswalk.com)"
+        "A Python library for creating science animation with [Manim](https://www.manim.community) in Google [Colab](https://colab.google).<br>&#10024;&nbsp;[mscene.curiouswalk.com](https://mscene.curiouswalk.com)"
       ],
       "metadata": {
         "id": "yNXt9zhZfn6h"
@@ -47,11 +48,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Installation**"
+      ],
+      "metadata": {
+        "id": "2g1ykPfzqoXm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%pip install -q mscene\n",
         "import mscene\n",
-        "print(mscene.__about__)"
+        "%mscene -l manim"
       ],
       "metadata": {
         "id": "hL1OOSlHcGk1"
@@ -60,26 +70,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "%mscene -h"
+        "**Import**"
       ],
       "metadata": {
-        "id": "b0sVYAV3aaiN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%mscene -l manim"
-      ],
-      "metadata": {
-        "id": "naQ2XRAK32_Y"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "RwkhMGtCqxXG"
+      }
     },
     {
       "cell_type": "code",
@@ -95,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Example Scenes"
+        "## Scenes"
       ],
       "metadata": {
         "id": "ChNWO0aP7prt"
@@ -104,16 +101,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Manim Scene"
+        "**Example Scene**"
       ],
       "metadata": {
-        "id": "E8rpD5H8bLGx"
+        "id": "wz6vt4gMuFxK"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "%%manim -qm ManimScene\n",
+        "\n",
         "class ManimScene(Scene):\n",
         "    def construct(self):\n",
         "        banner = ManimBanner()\n",
@@ -130,15 +128,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Fractal Scene"
+        "**Adding Plugins**"
       ],
       "metadata": {
-        "id": "V44bG7SybOjF"
+        "id": "RFj_bFXatY_E"
       }
     },
     {
       "cell_type": "code",
       "source": [
+        "import mscene\n",
         "%mscene plugins\n",
         "from mscene.plugins import *"
       ],
@@ -149,9 +148,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Example Plugin**"
+      ],
+      "metadata": {
+        "id": "vTmnOm5HtsaA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%manim -qm FractalScene\n",
+        "\n",
         "class FractalScene(Scene):\n",
         "    def construct(self):\n",
         "        ks = KochSnowflake(level=2)\n",
@@ -170,7 +179,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## New Scene"
+        "**New Scene**"
       ],
       "metadata": {
         "id": "Kmcjj05JU3BQ"
@@ -195,7 +204,7 @@
       "source": [
         "## End Session\n",
         "\n",
-        "Run this code cell to disconnect the runtime and terminate the session."
+        "Run the cell below to disconnect the runtime and terminate the session."
       ],
       "metadata": {
         "id": "Fn6lcBcm9vSl"
