--- a/source/scenes/fibonacci_spiral.ipynb
+++ b/source/scenes/fibonacci_spiral.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# Fibonacci Spiral\n",
         "\n",
-        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/site/fibonacci_spiral.png\">\n",
+        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/fibonacci_spiral.png\">\n",
         "\n",
         "There is a fascinating relation between the Fibonacci sequence and natural patterns. A remarkable example is the Fibonacci spiral, which is constructed by adding arcs of quarter circles with radii corresponding to Fibonacci numbers, making a beautiful mathematical pattern often observed throughout nature. &#10024;&nbsp;[mscene.curiouswalk.com/scenes/fibonacci-spiral](https://mscene.curiouswalk.com/scenes/fibonacci-spiral)"
       ],
@@ -74,7 +74,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Imports"
+        "Import"
       ],
       "metadata": {
         "id": "iDEC75jgEJCh"
@@ -212,6 +212,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n = 25\n",
+        "print(f\"First {n} terms of the Fibonacci sequence:\", end=\" \")\n",
+        "print(*fseq(n), sep=\", \")"
+      ],
+      "metadata": {
+        "id": "FsFXGC5RZERZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Scenes"
@@ -256,19 +269,6 @@
     {
       "cell_type": "code",
       "source": [
-        "n = 25\n",
-        "print(f\"First {n} terms of the Fibonacci sequence:\", end=\" \")\n",
-        "print(*fseq(n), sep=\", \")"
-      ],
-      "metadata": {
-        "id": "FsFXGC5RZERZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "%%manim -qm SceneOne\n",
         "\n",
         "class SceneOne(Scene):\n",
@@ -306,7 +306,6 @@
         "\n",
         "class SceneTwo(Scene):\n",
         "    def construct(self):\n",
-        "        manim_image(self)\n",
         "        width = config.frame_width * 3 / 4\n",
         "        mob = fsmob(6, width=width)\n",
         "\n",
@@ -398,11 +397,34 @@
         "        self.play(Transform(mob, _mob, run_time=6))\n",
         "        self.wait(2)\n",
         "\n",
-        "        self.play(Restore(mob, run_time=4))\n",
+        "        self.play(Restore(mob, run_time=5))\n",
         "        self.wait(0.5)"
       ],
       "metadata": {
         "id": "7JrAqW--3Ucl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Download Script\n",
+        "\n",
+        "Run the cell below to download the scene script."
+      ],
+      "metadata": {
+        "id": "P542Tc9j1C_x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import mscene\n",
+        "%mscene fibonacci_spiral.py"
+      ],
+      "metadata": {
+        "id": "Wq9zWnd54En3"
       },
       "execution_count": null,
       "outputs": []
