--- a/source/scenes/koch_curve.ipynb
+++ b/source/scenes/koch_curve.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyNXQNJ8HBRIZgI0Gu0s4wq/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +32,7 @@
       "source": [
         "# Koch Curve\n",
         "\n",
-        "<a href=\"https://www.youtube.com/watch?v=fDGN3bGcXSg\"><img width=\"50%\" src=\"https://img.youtube.com/vi/fDGN3bGcXSg/maxresdefault.jpg\" alt=\"Watch on YouTube\"></a>\n",
+        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/koch_curve.png\">\n",
         "\n",
         "In mathematics, the intriguing concept of self-similarity emerges, wherein an object bears resemblance, either entirety or partially, to a smaller iteration of itself. A remarkable illustration of this phenomenon is the Koch Curve, showcasing the beauty of complexity inherent in self-similar geometric patterns. A fractal formed from the Koch Curve is the Koch Snowflake. It is created by repeatedly dividing each side of an equilateral triangle into three segments and replacing the middle segment with a smaller equilateral triangle. This process leads to a shape with an infinite perimeter enclosing a finite area. &#10024;&nbsp;[mscene.curiouswalk.com/scenes/koch-curve](https://mscene.curiouswalk.com/scenes/koch-curve)"
       ],
@@ -51,6 +50,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Installation"
+      ],
+      "metadata": {
+        "id": "c34lKbph84az"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -62,6 +70,15 @@
         "import mscene\n",
         "%mscene -l manim plugins"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imports"
+      ],
+      "metadata": {
+        "id": "IBrxn3hZ85MR"
+      }
     },
     {
       "cell_type": "code",
@@ -340,7 +357,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### End Session\n",
+        "## Download Script\n",
+        "\n",
+        "Run the cell below to download the scene script."
+      ],
+      "metadata": {
+        "id": "X4N5yMv49AsN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import mscene\n",
+        "%mscene koch_curve.py"
+      ],
+      "metadata": {
+        "id": "OBupcua-9PrD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## End Session\n",
         "\n",
         "Run the cell below to disconnect the runtime and terminate the session."
       ],
