--- a/source/scenes/cycloids.ipynb
+++ b/source/scenes/cycloids.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# Cycloids\n",
         "\n",
-        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/cycloids.png\">\n",
+        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/scenes/cycloids.png\">\n",
         "\n",
         "Learn how a circle rolls along a straight line, creating a cycloid, and explore its variations: epicycloid and hypocycloid, formed when they roll along the outside or inside edge of another circle. Roll circles in different configurations to draw various cycloidal curves and visualize the intriguing patterns. Simulate to study the applications of these fascinating curves in multiple fields, including mathematics, physics, and engineering. Perfect for anyone curious about the geometry of rolling circles. &#10024;&nbsp;[mscene.curiouswalk.com/scenes/cycloids](https://mscene.curiouswalk.com/scenes/cycloids)"
       ],
