--- a/source/scenes/koch_curve.ipynb
+++ b/source/scenes/koch_curve.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# Koch Curve\n",
         "\n",
-        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/koch_curve.png\">\n",
+        "<img width=\"50%\" src=\"https://mscene.curiouswalk.com/assets/scenes/koch_curve.png\">\n",
         "\n",
         "In mathematics, the intriguing concept of self-similarity emerges, wherein an object bears resemblance, either entirety or partially, to a smaller iteration of itself. A remarkable illustration of this phenomenon is the Koch Curve, showcasing the beauty of complexity inherent in self-similar geometric patterns. A fractal formed from the Koch Curve is the Koch Snowflake. It is created by repeatedly dividing each side of an equilateral triangle into three segments and replacing the middle segment with a smaller equilateral triangle. This process leads to a shape with an infinite perimeter enclosing a finite area. &#10024;&nbsp;[mscene.curiouswalk.com/scenes/koch-curve](https://mscene.curiouswalk.com/scenes/koch-curve)"
       ],
@@ -84,7 +84,7 @@
       "cell_type": "code",
       "source": [
         "from mscene.manim import *\n",
-        "from mscene.plugins import *"
+        "from mscene.fractal import *"
       ],
       "metadata": {
         "id": "EkbTlUS-f2Gm"
